2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (print_entry): Put an asterisk
	in front of chosen entry to mark it even if highlighting is lost.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_boot): Default to
	gfxpayload=keep if cbfb is active.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ata.c (grub_ata_real_open): Use grub_error properly.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Add missing video ids to coreboot and ieee1275 video.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Add mips-arc support.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/dl.c (grub_dl_resolve_symbols): Handle malloc failure.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Move mips-arc link address. Previous link address was chosen
	in belief that RAM on SGI platforms grows down while in fact it
	grows up from an unusual base.

2013-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/arc/arcdisk.c (grub_arcdisk_iterate_iter):
	Fix a type which prevented CD-ROM and floppy boot.

2013-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Support coreboot framebuffer.

	* grub-core/video/i386/coreboot/cbfb.c: New file.

2013-04-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mm.c (grub_mm_init_region): Fix condition for
	detecting too small regions.

2013-04-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (legacycfg): Enable on EFI.

2013-04-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/efi/relocator.c (grub_relocator_firmware_alloc_region):
	Remove dprintf.
	* grub-core/lib/relocator.c (malloc_in_range): Likewise.

2013-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/init.c (grub_claim_heap): Improve handling
	of GRUB_IEEE1275_FLAG_FORCE_CLAIM.
	* grub-core/loader/powerpc/ieee1275/linux.c