@@ -673,13 +673,14 @@ fi
 case "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" in
     sparc64-ieee1275) mkimage_target=sparc64-ieee1275-raw ;;
     mipsel-loongson) mkimage_target=mipsel-loongson-elf ;;
+    mips-qemu_mips | mipsel-qemu_mips) mkimage_target="${grub_modinfo_target_cpu}-${grub_modinfo_platform}"-elf ;;
     *) mkimage_target="${grub_modinfo_target_cpu}-${grub_modinfo_platform}" ;;
 esac
 
 case "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" in
-    i386-efi | x86_64-efi) imgext=efi ;;
+    i386-efi | x86_64-efi | ia64-efi) imgext=efi ;;
     mipsel-loongson | i386-coreboot | i386-multiboot | i386-ieee1275 \
-	| powerpc-ieee1275) imgext=elf ;;
+	| powerpc-ieee1275 | mips-qemu_mips | mipsel-qemu_mips) imgext=elf ;;
     *) imgext=img ;;
 esac
 
